--- a/web-transport-quinn/Cargo.toml
+++ b/web-transport-quinn/Cargo.toml
@@ -23,7 +23,7 @@ ring = ["quinn/rustls-ring", "rustls/ring"]
 bytes = "1"
 futures = "0.3"
 http = "1"
-log = "0.4"
+tracing = "0.1"
 
 quinn = { version = "0.11", default-features = false, features = [
     "platform-verifier",
@@ -49,6 +49,6 @@ web-transport-trait = { workspace = true }
 [dev-dependencies]
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
-env_logger = "0.11"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 rustls-pemfile = "2"
 tokio = { version = "1", features = ["full"] }
