--- a/web-transport-ws/package.json
+++ b/web-transport-ws/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "@kixelated/web-transport-ws",
+	"name": "@moq/web-transport-ws",
 	"author": "Luke Curley <kixelated@gmail.com>",
 	"version": "0.1.2",
 	"description": "WebTransport polyfill using WebSockets",
 	"type": "module",
 	"license": "(MIT OR Apache-2.0)",
-	"repository": "github:kixelated/web-transport",
+	"repository": "github:moq-dev/web-transport",
 	"exports": {
 		".": "./src/index.ts"
 	},
