Add web-transport-any crate
This crate offers a generic wrapper over the 'first-party'
implementations of the `WebTransport` trait and its associated types.
This trait is not dyn-compatible, so this is an ergonomic option for
code that should return multiple possible implementors, e.g. a
QUIC connection with a possible fallback on WebSockets.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "web-transport",
+    "web-transport-any",
     "web-transport-proto",
     "web-transport-quiche",
     "web-transport-quinn",
@@ -11,5 +12,6 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
+web-transport-any = { path = "web-transport-any", version = "0.1" }
 web-transport-proto = { path = "web-transport-proto", version = "0.3" }
 web-transport-trait = { path = "web-transport-trait", version = "0.3" }
