--- a/web-transport-proto/Cargo.toml
+++ b/web-transport-proto/Cargo.toml
@@ -16,6 +16,7 @@ categories = ["network-programming", "web-programming"]
 bytes = "1"
 http = "1"
 thiserror = "2"
+qpack = "0.1.0"
 
 # Just for AsyncRead and AsyncWrite traits
 tokio = { version = "1", default-features = false, features = ["io-util"] }
