--- a/web-transport-quinn/Cargo.toml
+++ b/web-transport-quinn/Cargo.toml
@@ -52,3 +52,4 @@ clap = { version = "4", features = ["derive"] }
 env_logger = "0.11"
 rustls-pemfile = "2"
 tokio = { version = "1", features = ["full"] }
+rcgen = "0.14.0"
