--- a/web-transport-quiche/Cargo.toml
+++ b/web-transport-quiche/Cargo.toml
@@ -15,10 +15,12 @@ categories = ["network-programming", "web-programming"]
 all-features = true
 
 [dependencies]
+boring = "4"
 bytes = "1"
 flume = "0.11"
 futures = "0.3"
 http = "1"
+rustls-pki-types = "1"
 
 thiserror = "2"
 
@@ -38,5 +40,6 @@ web-transport-trait = { workspace = true }
 [dev-dependencies]
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
+rustls-pemfile = "2"
 tokio = { version = "1", features = ["full"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
