(AI) Improve the PR a bit.
1. Add some tests.
2. Avoid zeroing the Vec
3. Avoid copying grease payloads.
4. Fix the two other instances of this bug in the code.
5. Avoid a bug on 32-bit systems I guess.

--- a/web-transport-proto/Cargo.toml
+++ b/web-transport-proto/Cargo.toml
@@ -21,3 +21,6 @@ thiserror = "2"
 # Just for AsyncRead and AsyncWrite traits
 tokio = { version = "1", default-features = false, features = ["io-util"] }
 url = "2"
+
+[dev-dependencies]
+tokio = { version = "1", features = ["macros", "rt", "io-util"] }
