--- a/web-transport-wasm/Cargo.toml
+++ b/web-transport-wasm/Cargo.toml
@@ -33,6 +33,7 @@ features = [
     "ReadableStreamReadResult",
     "WebTransport",
     "WebTransportOptions",
+    "WebTransportHash",
     "WebTransportBidirectionalStream",
     "WebTransportCloseInfo",
     "WebTransportSendStream",
